# rave

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  Rave.sln  Rave.vcproj  Rave.vsprops  RaveConfig.cmake  RaveConfig.cmake.in  aclocal.m4  bootstrap  buildMe.sh  config.h.in  configure  configure.ac  my-configure  rave-impl.pc  rave-impl.pc.in  rave.i  rave.pc  rave.pc.in  rave.spec  rave.spec.in  rave_autoconf.i.in  rave_vcbuild.i  upload.sh  vcconfig.h
UnitTests/: LowMomentumScale.cxx  Makefile.am  Makefile.in  PropertyHandler.cxx  PropertyHandler.h  RaveTest.cxx  RaveTest.h  TinyBField.cxx  ZeroBField.cxx  unittest.cxx
java/: Makefile.am  Makefile.in
java/tests/: Flavor.java  Makefile.am  Makefile.in  Simple.java  TwoTrack.java
src/: Makefile.am  Makefile.in
src/CommonTools/Clustering1D/test/: ClusteringTest.cpp  Input.cpp  run  svnignore
src/CommonTools/Statistics/interface/: hsm_1d.icc
src/CommonTools/Statistics/test/: StatTest.cpp
src/DataFormats/BTauReco/interface/: BaseTagInfo.h  JTATagInfo.h  JetTag.h  JetTagFwd.h  JetTracksAssociation.h  RefMacros.h  SecondaryVertexTagInfo.h  TaggingVariable.h  TaggingVariableFwd.h  TrackIPTagInfo.h
src/DataFormats/BTauReco/src/: JetTag.cc  SecondaryVertexTagInfo.cc  TaggingVariable.cc
src/DataFormats/BTauReco/test/: TaggingVariableTest.cpp
src/DataFormats/BeamSpot/interface/: BeamSpot.h
src/DataFormats/BeamSpot/src/: BeamSpot.cc
src/DataFormats/CLHEP/interface/: AlgebraicObjects.h  Migration.h
src/DataFormats/Candidate/interface/: Particle.h
src/DataFormats/Candidate/src/: Particle.cc
src/DataFormats/Common/interface/: Handle.h  RefToBase.h
src/DataFormats/GeometryCommonDetAlgo/interface/: ErrorMatrixTag.h  GlobalWeight.h  Measurement1D.h  PerpendicularBoundPlaneBuilder.h  WeightMatrixTag.h
src/DataFormats/GeometrySurface/interface/: BlockWipedAllocator.h  BoundCone.h  BoundCylinder.h  BoundDisk.h  BoundPlane.h  BoundSurface.h  Bounds.h  Cone.h  ConeBuilder.h  Cylinder.h  CylinderBuilder.h  DiskBuilder.h  GeomExceptions.h  GeometricSorting.h  Plane.h  PlaneBuilder.h  RectangularPlaneBounds.h  ReferenceCounted.h  SimpleConeBounds.h  SimpleCylinderBounds.h  SimpleDiskBounds.h  Surface.h  TangentPlane.h  TkRotation.h  TrapezoidalPlaneBounds.h
src/DataFormats/GeometrySurface/src/: BlockWipedAllocator.cc  BoundCone.cc  BoundCylinder.cc  BoundDisk.cc  BoundPlane.cc  BoundingBox.cc  Cone.cc  Cylinder.cc  GeneralNSurfaceDelimitedBounds.cc  GeneralTrapezoidalPlaneBounds.cc  Plane.cc  SimpleDiskBounds.cc  TrapezoidalPlaneBounds.cc
src/DataFormats/GeometryVector/interface/: Basic2DVector.h  Basic3DVector.h  CoordinateSets.h  GlobalPoint.h  GlobalTag.h  GlobalVector.h  LocalPoint.h  LocalTag.h  LocalVector.h  MeasurementTag.h  PV2DBase.h  PV3DBase.h  Phi.h  Pi.h  Point2DBase.h  Point3DBase.h  PointTag.h  PreciseFloatType.h  Theta.h  Vector2DBase.h  Vector3DBase.h  VectorTag.h
src/DataFormats/GsfTrackReco/.admin/: developers
src/DataFormats/GsfTrackReco/CVS/: Entries  Repository
src/DataFormats/GsfTrackReco/interface/: GsfTrack.h  GsfTrackExtraFwd.h  GsfTrackFwd.h
src/DataFormats/JetReco/interface/: JetTracksAssociation.h
src/DataFormats/Math/: hacked
src/DataFormats/Math/interface/: .Point3D.h.swp  Error.h  LorentzVector.h  Vector.h
src/DataFormats/TrackReco/interface/: Track.h  TrackBase.h  TrackFwd.h
src/DataFormats/TrackReco/src/: Track.cc
src/DataFormats/TrajectorySeed/interface/: PropagationDirection.h
src/DataFormats/TrajectoryState/interface/: TrackCharge.h
src/DataFormats/VertexReco/interface/: Vertex.h  VertexFwd.h
src/DataFormats/VertexReco/src/: Vertex.cc
src/DetectorDescription/Core/interface/: adjgraph.h
src/Environment/Configuration/interface/: MultiType.h
src/Environment/Configuration/src/: MultiType.cc
src/Environment/Configuration/test/: ConfigurationTest.cpp
src/FWCore/MessageLogger/interface/: Colors.h  MessageLogger.h
src/FWCore/MessageLogger/src/: Colors.cc  MessageLogger.cc
src/FWCore/ParameterSet/interface/: ParameterSet.h
src/FWCore/ParameterSet/src/: ParameterSet.cc
src/FWCore/Utilities/interface/: Exception.h
src/FWCore/Utilities/src/: EDMException.cc  Exception.cc
src/FWCore/Utilities/test/: Utilities.cpp
src/Geometry/CommonDetUnit/interface/: GlobalTrackingGeometry.h
src/MagneticField/Engine/interface/: MagneticField.h
src/MagneticField/Engine/src/: MagneticField.cc
src/ROOT/: Rtypes.h
src/ROOT/genvector/Math/: AxisAngle.h  Boost.h  BoostX.h  BoostY.h  BoostZ.h  Cartesian2D.h  Cartesian3D.h  Cylindrical3D.h  CylindricalEta3D.h  DisplacementVector2D.h  DisplacementVector3D.h  EulerAngles.h  LinkDef_GenVector.h  LinkDef_GenVector32.h  LinkDef_Point3D.h  LinkDef_Rotation.h  LinkDef_Vector3D.h  LinkDef_Vector4D.h  LorentzRotation.h  LorentzVector.h  Plane3D.h  Point2D.h  Point2Dfwd.h  Point3D.h  Point3Dfwd.h  Polar2D.h  Polar3D.h  PositionVector2D.h  PositionVector3D.h  PtEtaPhiE4D.h  PtEtaPhiM4D.h  PxPyPzE4D.h  PxPyPzM4D.h  Quaternion.h  Rotation3D.h  RotationX.h  RotationY.h  RotationZ.h  (+11 more)
src/ROOT/mathcore/: TMath.cc  TMath.h
src/ROOT/src/: GenVector_Throw.cc
src/RaveBase/: Makefile.am  Makefile.in
src/RaveBase/RaveInterface/: BuildFile
src/RecoBTag/: Makefile.am  Makefile.in
src/RecoVertex/: Makefile.am  Makefile.in
src/RecoVertex/KalmanVertexFit/: hacked
src/RecoVertex/KinematicFit/: Makefile.am  Makefile.in
src/RecoVertex/SkeletonVertexReco/: README
src/RecoVertex/VertexPrimitives/: hacked
src/RecoVertex/VertexTools/: hacked
src/TrackingTools/PatternTools/: hacked
src/TrackingTools/TrajectoryParametrization/: hacked
src/TrackingTools/TrajectoryState/: hacked
src/TrackingTools/TransientTrack/: hacked
src/boost/date_time/: c_time.hpp  date.hpp  gregorian_calendar.hpp  gregorian_calendar.ipp  time_facet.hpp
src/boost/mpl/: zip_view.hpp
tests/: Makefile.am  Makefile.in  kinematics01.cc  kinematics02.cc  kinematics03.cc  memorytests.cc  propagatortests.cc  rave.txt  rave_version.cc  rave_windows.cc
tests/windows/: kinematics01.vcproj  kinematics02.vcproj  windows.vcproj
(+660 files in other folders)
